--- a/config
+++ b/config
@@ -53,7 +53,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run -opacity "60"
+bindsym $mod+d exec rofi -show run -opacity "70"
 
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
@@ -198,7 +198,7 @@ bar {
 }
 
 # lock screen
-bindsym $mod+shift+x exec i3lock
+bindsym $mod+shift+x exec lock -f FreeMono -- scrot -z
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -220,5 +220,5 @@ bindsym XF86AudioPrev exec playerctl previous
 
 exec_always compton -f
 exec_always spotify
-exec_always feh --bg-scale 2 --cycle ~/Pictures/*
+exec_always feh --bg-scale 2 --cycle ~/Pictures/wallpaper.jpg
 
