--- a/config
+++ b/config
@@ -113,7 +113,7 @@ bindsym $mod+a focus parent
 
 set $workspace1 "1: Terminal"
 set $workspace2 "2: Chrome"
-set $workspace3 "3: "
+set $workspace3 "3: Slack"
 set $workspace4 "4: "
 set $workspace5 "5: "
 set $workspace6 "6: "
@@ -147,6 +147,7 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 assign [class="Google-chrome"] $workspace2
+assign [class="Slack"] $workspace3
 for_window [class="Spotify"] move to workspace $workspace10
 
 # reload the configuration file
